# my-box

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: 001 根据图片生成logo.md
public/data/: markets.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/snippet/: mod.rs
src-tauri/src/modules/snippet/keyboard_hooks/: mod.rs
src-tauri/src/modules/snippet/keyboard_hooks/event/: mod.rs  state.rs
src-tauri/src/plugins/: sqlite.rs
src/api/: StockApi.ts  index.ts
src/assets/styles/: application.scss  tailwindcss.css
src/components/Layout/: WindowTitle.vue  index.vue
src/components/Layout/Header/: Search.vue  index.vue
src/hooks/: useForm.ts  useModal.ts  usePublicData.ts  useSqliteList.ts  useTheme.ts
src/model/: dicStock.ts  index.ts
src/router/: index.ts
src/services/: dicStock.ts  index.ts  notification.ts  snippet.ts  sqlite.ts  stock.ts
src/store/: app.ts  index.ts
src/utils/: apollo.ts
src/views/dicStock/: Form.vue  index.vue
src/views/dicStock/aStock/: index.vue
src/views/dicStock/aStock/components/: DividendList.vue
src/views/dicStock/etfStock/: index.vue
src/views/home/: index.vue
src/views/preferences/: Information.vue  index.vue
src/views/preferences/base/: index.vue
src/views/snippet/: Form.vue  index.vue
src/views/stock/: Form.vue  index.vue
